# snippy

./: FEATURES.md  PROJECT_SUMMARY.md  README.md  demo.py  examples.md  pyproject.toml
snippy/: __init__.py  cli.py  clipboard.py  database.py  display.py  executor.py
snippy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_basic.py
